--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@azure-rest/ai-inference": "latest",
     "@azure/core-auth": "latest",
     "@azure/core-sse": "latest",
+    "@rive-app/react-canvas": "^4.21.4",
     "firebase": "^11.10.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
