--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@azure-rest/ai-inference": "latest",
-    "@azure/core-auth": "latest",
-    "@azure/core-sse": "latest",
+    "@google/generative-ai": "^0.24.1",
     "@rive-app/react-canvas": "^4.21.4",
     "axios": "^1.10.0",
     "firebase": "^11.10.0",
@@ -19,7 +17,6 @@
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
-    "openai": "^6.15.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
