--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.16.0",
     "lucide-react": "^0.513.0",
-    "next": "15.3.3",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
